<resources>
    <string name="app_name">Calculator</string>

    <string name="eqaul">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="subtract">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="add">+</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="multiply">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="div">/</string>
    <string name="modula">%</string>
    <string name="c">C</string>
    <string name="_0">0</string>


    <!--app name-->
    <string name="remind_to_take_a_break">Remind me to take a break</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="remind_me">Remind me to take a break</string>
    <string name="remind_me_for_bed_time">remind_me_for_bed_time</string>
    <string name="remind_for_bed_time">Remind me for bed time</string>
    <string name="limit_data_usage">prefs_limit_data_usage</string>
    <string name="stream_video">Only stream HD video on Wi-Fi</string>
    <string name="limit_mobile_usage">Limit mobile data usage</string>
    <string name="double_tap_to_seek">Double-tap to seek</string>
    <string name="pref_seek_val">pref_seek_val</string>
    <string name="seconds">seconds</string>
    <string name="uploads">Uploads</string>
    <string name="pref_uploads">pref_uploads</string>
    <string name="specify_network_prefs">Specify network preferences for uploads</string>
    <string name="prefs_restricted_mode">prefs_restricted_mode</string>
    <string name="restricted_mode">Restricted Mode can help to hide videos with potentially mature content.No filter is 100% accurate, but it should help you to avoid most of this type of content.</string>
    <string name="restricted_mode_description">Restricted Mode</string>
    <string name="prefs_enable_stats">prefs_enable_stats</string>
    <string name="enable_stats">Enable stats for nerds</string>

    <string-array name="pref_upload_quality_entries">
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
        <item>Original</item>
    </string-array>

    <string-array name="pref_remind_me_to_take_a_break">
        <item>1 hours</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>5 hours</item>
        <item>10 hours</item>
    </string-array>

    <string-array name="pref_seek_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
    </string-array>

    <string-array name="pref_duration">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="pref_uploads">
        <item>Only when on Wi-Fi</item>
        <item>On any network</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




    <string name="fast_playback_speed">%.1fx speed</string>
    <string name="player_controls_exit">Navigate up</string>
    <string name="select_playback_speed">Select playback speed</string>
    <string name="select_audio_track">Select audio track</string>
    <string name="select_subtitle_track">Select subtitle track</string>
    <string name="controls_lock">Lock controls</string>
    <string name="player_controls_progress">Player progress bar</string>
    <string name="video_zoom">Video zoom</string>
    <string name="player_controls_previous">Player previous</string>
    <string name="player_controls_play_pause">Player play pause</string>
    <string name="player_controls_next">Player next</string>
    <string name="controls_unlock">Unlock controls</string>
    <string name="best_fit">Best fit</string>
    <string name="stretch">Stretch</string>
    <string name="crop">Crop</string>
    <string name="hundred_percent">100%</string>
    <string name="disable">Disable</string>
    <string name="no_audio_tracks_found">Audio tracks for this video are either unavailable or not supported.</string>
    <string name="no_subtitle_tracks_found">Subtitle tracks for this video are either unavailable or not supported.</string>
    <string name="auto_download_live_class_recording_on_your_phone">Auto Download Live Class Recording on your Phone</string>
    <string name="auto_download_note">Note:- You can auto download your recording by enabling the auto download feature in the settings.</string>
    <string name="website_link">"Website Link: "</string>
    <string name="website">Website</string>
    <string name="our_website_desktop_link">Our Website / Desktop link</string>
    <string name="close">Close</string>


</resources>
