<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:title=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/data_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginEnd="12dp"
        android:hint="@string/_0"
        android:textSize="54sp"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/result_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="36sp"
        android:visibility="gone"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="12dp"
        android:textColor="#706E6E"
        app:layout_constraintBottom_toTopOf="@id/view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linecolor"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                style="@style/operatorbutton"
                android:onClick="onClearClick"
                android:text="@string/c" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="@style/operatorbutton"
                android:onClick="onBackClick"
                app:icon="@drawable/backspace"
                app:iconTint="@color/btnBackground2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_modulo"
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/modula" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/div" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/multiply" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/add" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subtract"
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:text="@string/subtract" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_AC"
                style="@style/operatorbutton"
                android:onClick="onAllClearClick"
                android:textSize="18sp"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/zero" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/operatorbutton"
                android:textColor="@color/white"
                android:backgroundTint="@color/btnBackground2"
                android:onClick="onEqualClick"
                android:text="@string/eqaul" />


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>